        Extended config changes to examples/reindex.pl (thanks jimbo).
        Now require CGI::Wiki 0.62 to fix bug with deleting versions.
        Try to ensure that a .htaccess file protecting wiki.conf is installed.
        Allow for external URLs for Text Formatting help.
        Home node recent changes box now flags new entries.

0.46	21 December 2004
        Minor bug fixes: remove bogus edit link on index listings,
          add missing default behaviour for geolocation
        Update supersearch help text URL.
        Add nofollow to robots meta tag.
        Added new CSS class "node_name" for inline non-hyperlink references
          to node names - see README.CSS for details.
        Fix bug with diff display on nodes containing macros.
        Fixed distance search paging bug.
        Fixed bug that allowed autocreation of locales and categories with
          trailing spaces in the name.
        Config management refactoring. This should not result in any
          user-visible changes, apart from introducing a new dependency on
          Class::Accessor.
        Make it clearer in documentation that overriding factory templates
          is a risky activity.
        Update feedback details and include URL of RT queue.
        Add missing tests to MANIFEST so they are included with the
          distribution.
	
0.45	1 December 2004
        Made the geolocation stuff work worldwide.  Squeeeeeee!
        You can now choose between doing your distance calculations with
          the British National Grid, the Irish National Grid, or a UTM
          ellipsoid.  If you wish to use anything other than the British
          National Grid and you have pre-existing location data then you
          will need to save an edit of each node with location data before
          distance searches will work.
        In less exciting news:
          Fixed bug relating to lat/long representation.
          Removed debugging warn accidentally left in last release.