@@ -68,8 +68,8 @@ sub _init {
                      navbar_on_home_page => 1,
                      home_name => "Home",
                      site_desc => "A default configuration of OpenGuides",
-                     default_city => "London",
-                     default_country => "United Kingdom",
+                     default_city => "",
+                     default_country => "",
                      default_language => "en",
                      formatting_rules_node => "Text Formatting Examples",
                      formatting_rules_link => "http://openguides.org/page/text_formatting",
