@@ -4,6 +4,7 @@
         Try to ensure that a .htaccess file protecting wiki.conf is installed.
         Allow for external URLs for Text Formatting help.
         Home node recent changes box now flags new entries.
+        Made default city and country be blank; specify them if you want them.
 
 0.46	21 December 2004
         Minor bug fixes: remove bogus edit link on index listings,
